# lambda-zax

./: .gitignore  build.gradle  build.xml
AlexaSkillBuilder/: AlexaSkill.hs  AlexaSkillBuilder.cabal  AlexaSkillOutput.hs  Main.hs  Preprocessor.hs  ZcodeParser.hs
alexa/: LIST_OF_OBJECTS.txt  build.sh  gen-interaction-model.py  grammar.py  intent-schema.txt  intent.schema  objects.txt  rules.txt  utterances.txt
src/com/zaxsoft/apps/zax/: Zax.java
src/com/zaxsoft/zmachine/: ZIOCard.java  ZUserInterface.java
src/main/java/com/zaxsoft/apps/zax/: FileStreamProvider.java  LambdaHandler.java  S3StreamProvider.java  StreamProvider.java  Zax.java  ZaxCommand.java  ZaxSpeechlet.java
src/main/java/com/zaxsoft/streams/: FileStreamProvider.java  S3StreamProvider.java  StreamProvider.java
src/main/java/com/zaxsoft/zmachine/: ZCPU.java  ZUserInterface.java
src/main/resources/: log4j.properties
