name: AlexaSkillBuilder
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
stability: experimental
Executable AlexaSkillBuilder
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      process -any,
      optparse-applicative -any,
      containers -any,
      text -any,
      regex-compat -any,
      mtl -any,
      filepath -any,
      directory -any,
      aeson -any,
      aeson-pretty -any,
      bytestring -any
  other-modules:
      AlexaSkill
      AlexaSkillOutput
      Preprocessor
      ZcodeParser
